# smg-pyopencv

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  environment.yml  pyopencv.cpp  pyopencv.pyi  pyproject.toml  setup.py
cmake/: UseOpenCV.cmake
smg/pyopencv/: __init__.py
